--- a/IEF_CSS3饼状loading效果.html
+++ b/IEF_CSS3饼状loading效果.html
@@ -55,7 +55,7 @@
 		}   
 		.circleProgress{   
 			border-radius: 100%;
-			border:30px solid rgba(255,0,0,0.5);
+			border:30px solid red;
 			border-right: 30px solid transparent;
 			border-bottom: 30px solid transparent;
 			position: absolute;   
@@ -76,14 +76,22 @@
 		@keyframes zua1{
 			0%{
 				transform: rotate(135deg); 
+				opacity: 1;
 			}
+			
+			
 			50%,100%{
+				opacity: 1;
 				transform: rotate(-45deg); 
 			}
 		}
 		@keyframes zua2{
 			0%,50%{
+				opacity: 0;
 				transform: rotate(-45deg); 
+			}
+			51%{
+				opacity: 1;
 			}
 			100%{
 				transform: rotate(-225deg); 
